update files with typos

--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -41,7 +41,7 @@
     <footer class="page-footer blue darken-3">
         <div class="footer-copyright">
             <div class="container">
-                for educational purposes only
+                For educational purposes only
             <a class="white-text right" href="https://codeinstitute.net" target="_blank">&copy; Code Institute</a>
             </div>
         </div>
